--- a/src/app/create-course/create-course.component.html
+++ b/src/app/create-course/create-course.component.html
@@ -2,6 +2,34 @@
 
   <h2 class="title">Create New Course</h2>
 
+  <mat-horizontal-stepper class="mat-elevation-z6" [linear]="true" labelPosition="bottom">
+    
+    <!-- Step 1 of Create New Course process -->
+    <mat-step errorMessage="Course details in error">
+      <ng-template matStepLabel>Course Detail</ng-template>
+      <create-course-step-1></create-course-step-1>
+      <div class="stepper-buttons">
+        <button mat-raised-button 
+          color="primary"
+          matStepperNext>Add Course Lessons</button>
+      </div>
+    </mat-step>
+    
+    <!-- Step 2 of Create New Course process -->
+    <mat-step errorMessage="Course lessons in error">
+      <ng-template matStepLabel>Course Lessons</ng-template>
+      <create-course-step-2></create-course-step-2>
+      <div class="stepper-buttons">
+        <button mat-raised-button
+          matStepperPrevious>Back</button>
+        <button mat-raised-button
+          color="accent">Create Course</button>
+      </div>
+
+
+    </mat-step>
+
+  </mat-horizontal-stepper>
 
 </div>
 
