--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,3 @@
-
-
 .courses-panel {
     max-width: 400px;
     margin: 0 auto;
@@ -9,15 +7,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 32px;
+  margin-bottom: 16px;
 }
 
-h2 {
-  font-family: "Roboto";
-}
+// Why is this here? Isn't the whole project in Roboto already?
+// h2 {
+//   font-family: "Roboto";
+// }
 
 .title {
   text-align: center;
   margin-right: 15px;
-
+  margin-bottom: 0;
 }
