--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -4,10 +4,68 @@
 
   <img class="course-thumbnail mat-elevation-z8" [src]="course?.iconUrl">
 
+  <div class="spinner-container" *ngIf="loading">
+    <mat-spinner></mat-spinner>
+  </div>
+
+  <!-- Lessons Data Table -->
+  <table mat-table class="lessons-table mat-elevation-z8"
+    matSort matSortDisableClear matSortActive="seqNo" matSortDirection="asc"
+    [dataSource]="lessons" multiTemplateDataRows>
+
+    <!-- Selection Column -->
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef>
+        <mat-checkbox [checked]="selection.hasValue() && isAllSelected()"
+          [indeterminate]="selection.hasValue() && !isAllSelected()"
+          (change)="onToggleSelectAll()"></mat-checkbox>
+      </th>
+      <td mat-cell *matCellDef="let lesson" (click)="$event.stopPropagation()">
+        <mat-checkbox (change)="onToggleSelectLesson(lesson)"
+          [checked]="selection.isSelected(lesson)"></mat-checkbox>
+      </td>
+    </ng-container>
+
+    <!-- Define First Data Column -->
+    <ng-container matColumnDef="seqNo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
+      <td mat-cell *matCellDef="let lesson">{{ lesson.seqNo }}</td>
+    </ng-container>
+
+    <!-- Define Second Data Column -->
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+      <td mat-cell *matCellDef="let lesson">{{ lesson.description }}</td>
+    </ng-container>
+
+    <!-- Define Third Data Column -->
+    <ng-container matColumnDef="duration">
+      <th mat-header-cell *matHeaderCellDef>Duration</th>
+      <td mat-cell *matCellDef="let lesson">{{ lesson.duration }}</td>
+    </ng-container>
+
+    <!-- Define Rows -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let lesson; columns: displayedColumns"
+      (click)="onToggleExpandLesson(lesson)"></tr>
+
+    <!-- multiTemplateDataRows -->
+    <!-- Alternate Column definition with multiTemplateDataRows -->
+    <ng-container matColumnDef="expandedDetail">
+      <td mat-cell *matCellDef="let lesson" colspan="4">
+        {{ lesson.longDescription }}</td>
+    </ng-container>
+    <!-- Alternate Row definition with multiTemplateDataRows -->
+    <tr mat-row *matRowDef="let lesson; columns: ['expandedDetail']"
+      [class.collapsed-detail]="lesson != expandedLesson"></tr>
+    
+  </table>
+
+  <!-- Paginator -->
+  <mat-paginator class="mat-elevation-z8" 
+    [length]="course?.lessonsCount"
+    [pageSize]="3"
+    [pageSizeOptions]="[3, 5, 10]">
+  </mat-paginator>
+
 </div>
-
-
-
-
-
-
