--- a/src/app/course/course.component.scss
+++ b/src/app/course/course.component.scss
@@ -26,6 +26,10 @@
   font-size: 20px;
 }
 
+.collapsed-detail {
+  display: none;
+}
+
 .spinner-container {
   height: 360px;
   width: 390px;
@@ -38,6 +42,7 @@
   width: 400px;
   margin-left: auto;
   margin-right: auto;
+
   tr:hover {
     background: whitesmoke;
     cursor: pointer;
@@ -54,10 +59,16 @@ mat-paginator {
   margin: 130px auto 0 auto;
 }
 
+.mat-column-select {
+  padding-left: 8px;
+  padding-right: 0;
+}
+
 .mat-column-seqNo {
   width: 32px;
   border-right: 1px solid black;
-  padding-right: 24px;
+  padding-left: 8px;
+  padding-right: 16px;
   text-align: center;
 }
 
