--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -23,7 +23,7 @@
 
   .drop-placeholder {
     background: #ccc;
-    border: dotted 3px #999;
+    border: dashed 2px #999;
     min-height: 60px;
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
