--- a/src/app/drag-drop/drag-drop.component.html
+++ b/src/app/drag-drop/drag-drop.component.html
@@ -1,16 +1,36 @@
-
-<div class="drag-drop-container">
+<div class="drag-drop-container" cdkDropListGroup>
 
   <div class="pending">
-
     <h3>Lessons To Watch:</h3>
+
+    <div cdkDropList class="lessons-list drag-drop-list"
+      (cdkDropListDropped)="dropMultiList($event)"
+      [cdkDropListData]="lessons">
+      
+      <div class="lesson drag-drop-item" *ngFor="let lesson of lessons" cdkDrag>
+        <!-- Drop Placeholder -->
+        <div class="drop-placeholder" *cdkDragPlaceholder></div>
+        {{ lesson.description }}
+      </div>
+
+    </div>
 
   </div>
 
-  <!-- div class="done">
-
+  <div class="done">
     <h3>Done:</h3>
 
-  </div-->
+    <div cdkDropList class="lessons-list drag-drop-list"
+      (cdkDropListDropped)="dropMultiList($event)"
+      [cdkDropListData]="done">
+
+      <div class="lesson drag-drop-item" *ngFor="let lesson of done" cdkDrag>
+        <!-- Drop Placeholder -->
+        <div class="drop-placeholder" *cdkDragPlaceholder></div>
+        {{ lesson.description }}
+      </div>
+
+    </div>
+  </div>
 
 </div>
