--- a/src/app/drag-drop/drag-drop.component.scss
+++ b/src/app/drag-drop/drag-drop.component.scss
@@ -1,6 +1,9 @@
+@import "../../mixins";
+
+@include drag-drop();
 
 .drag-drop-container {
-  font-family: "Roboto";
+  // font-family: "Roboto";
   display: flex;
   justify-content: center;
   margin-top: 50px;
