--- a/src/app/courses-card-list/courses-card-list.component.css
+++ b/src/app/courses-card-list/courses-card-list.component.css
@@ -1,5 +1,3 @@
-
-
 .course-card {
   margin: 20px 10px;
   max-width:474px;
@@ -29,3 +27,18 @@ mat-card-content p {
   padding: 10px;
 }
 
+/* Responsive Styles for Handset Portrait */
+.handset-portrait .course-card {
+  width: 100%;
+  margin: 0;
+  padding: 1rem 0;
+}
+
+.handset-portrait .course-thumbnail {
+  width: 100%;
+  margin: 0;  
+}
+
+.handset-portrait .long-description {
+  padding: 10px 10px 0 10px;
+}
