--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -1,20 +1,30 @@
-<mat-card class="course-card mat-elevation-z8" *ngFor="let course of courses">
+<mat-grid-list [cols]="numCols" [rowHeight]="rowHeight" 
+  [ngClass]="{'handset-portrait' : handsetPortrait}">
 
-  <mat-card-header>
-    <mat-card-title>{{ course.description }}</mat-card-title>
-  </mat-card-header>
+  <mat-grid-tile *ngFor="let course of courses">
 
-  <img mat-card-image [src]="course.iconUrl">
+    <mat-card class="course-card mat-elevation-z8">
 
-  <mat-card-content>
-    <p>{{ course.longDescription }}</p>
-  </mat-card-content>
+      <mat-card-header>
+        <mat-card-title>{{ course.description }}</mat-card-title>
+      </mat-card-header>
+    
+      <img mat-card-image [src]="course.iconUrl">
+    
+      <mat-card-content>
+        <p>{{ course.longDescription }}</p>
+      </mat-card-content>
+    
+      <mat-card-actions class="course-actions">
+        <button mat-raised-button color="primary" 
+          [routerLink]="['courses', course.id]">VIEW COURSE</button>
+        <button mat-raised-button color="accent" 
+          (click)="editCourse(course)">EDIT COURSE</button>
+      </mat-card-actions>
+    
+    </mat-card>
 
-  <mat-card-actions class="course-actions">
-    <button mat-raised-button color="primary" 
-      [routerLink]="['courses', course.id]">VIEW COURSE</button>
-    <button mat-raised-button color="accent" 
-      (click)="editCourse(course)">EDIT COURSE</button>
-  </mat-card-actions>
+  </mat-grid-tile>
 
-</mat-card>
+</mat-grid-list>
+
