--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,10 @@
 
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
 
+// Responsive Design mixins
+@import "./mixins";
+@include responsive-dialogs();
+
 // Fix for class mat-elevation-zx not having any effect
 // https://github.com/angular/components/issues/26094#issuecomment-1490245622
 @for $i from 0 through 24 {
