feat(section6) :sparkles: section6-3
Completed section6: Trees

--- a/src/app/tree-demo/tree-demo.component.scss
+++ b/src/app/tree-demo/tree-demo.component.scss
@@ -1,20 +1,14 @@
-
-
 .tree-demo-container {
   font-family: "Roboto";
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 30px;
+  padding: 30px 30px 0 30px;
 }
 
 .leaf-node {
   padding-left: 30px;
 }
-
-
-
-
 
 .example-tree-invisible {
   display: none;
@@ -26,7 +20,6 @@
   margin-bottom: 0;
   list-style-type: none;
 }
-
 
 /*
  * This padding sets alignment of the nested nodes.
