feat(section7) :sparkles: section7&8
Completed course

--- a/src/app/drag-drop/drag-drop.component.scss
+++ b/src/app/drag-drop/drag-drop.component.scss
@@ -3,7 +3,7 @@
 @include drag-drop();
 
 .drag-drop-container {
-  // font-family: "Roboto";
+  font-family: "Roboto";
   display: flex;
   justify-content: center;
   margin-top: 50px;
