--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <a mat-list-item routerLink="about"><mat-icon>question_answer</mat-icon><span>About</span></a>
       <a mat-list-item routerLink="drag-drop-example"><mat-icon>drag_indicator</mat-icon><span>Drag and Drop</span></a>
       <a mat-list-item routerLink="tree-demo"><mat-icon>park</mat-icon><span>Tree Demo</span></a>
+      <a mat-list-item routerLink="virtual-scrolling"><mat-icon>import_export</mat-icon><span>Virtual Scrolling</span></a>
       <a mat-list-item><mat-icon>person_add</mat-icon><span>Register</span></a>
       <a mat-list-item><mat-icon>account_circle</mat-icon><span>Login</span></a>
     </mat-nav-list>
