--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,116 @@
 @use '@angular/material' as mat;
 /* You can add global styles to this file, and also import other style files */
 
-@import "@angular/material/prebuilt-themes/indigo-pink.css";
+// Using a pre-built theme
+// @import "@angular/material/prebuilt-themes/indigo-pink.css";
+
+// Custom typography when using a custom theme
+// @import '@angular/material/theming';
+$custom-typography: mat.define-typography-config($font-family: '"Roboto", sans-serif;');
+
+// Include core styles
+@include mat.core();
+$dark-primary-text: rgba(black, 0.87);
+$light-primary-text: white;
+
+// A Sass map of colors
+$mat-primary: (
+// For example, the Indigo Palette:
+// $indigo-palette: (
+// Hues of the primary color:
+  50: #e8eaf6,
+  100: #c5cae9,
+  200: #9fa8da,
+  300: #7986cb,
+  400: #5c6bc0,
+  500: rgb(55, 212, 139),
+  // 500: #3f51b5,
+  600: #3949ab,
+  700: #303f9f,
+  800: #283593,
+  900: #1a237e,
+  // Accent colors to the primary color, used for highlighting
+  A100: #8c9eff,
+  A200: #536dfe,
+  A400: #3d5afe,
+  A700: #304ffe,
+  // The Contrast map, each corresponding to primary color above
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $light-primary-text,
+    400: $light-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text
+  )
+);
+
+$mat-accent: (
+  50: #fce4ec,
+  100: #f8bbd0,
+  200: #f48fb1,
+  300: #f06292,
+  400: #ec407a,
+  500: #e9b01e,
+  // 500: #e91e63,
+  600: #d81b60,
+  700: #c2185b,
+  800: #ad1457,
+  900: #880e4f,
+  A100: #ff80ab,
+  A200: #ff4081,
+  A400: #f50057,
+  A700: #c51162,
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $dark-primary-text,
+    400: $dark-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text
+  )
+);
+
+// Danger Palette can be customized, useful for things like 'Delete Account'
+// Without it, defaults to Red Palette
+// $mat-danger
+
+// Define our Palettes
+// Primary Palette
+$primary: mat.define-palette($mat-primary);
+$accent: mat.define-palette($mat-accent);
+
+// Define our Theme
+$theme: mat.define-light-theme((
+  color: (
+    primary: $primary, 
+    accent: $accent
+  ),
+  typography: $custom-typography
+  ));
+
+// Apply our Theme to a specific component
+// Configure button styles
+// @include mat.button-theme($theme);
+
+// Apply our Theme to Everything
+@include mat.all-component-themes($theme);
 
 // Responsive Design mixins
 @import "./mixins";
